# my_bevy_game

./: .gitignore  Cargo.toml  run.ps1  run.sh  zip.sh
assets/: boxes.json  game_config.json
src/: config.rs  game_config.rs  game_lib.rs  game_panel.rs  main.rs  my_error.rs  play_box.rs  preview.rs  systems.rs  utils.rs
