[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_common_assets = { version = "0.13.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
